# parrot-db

./: .gitignore  README.md  client.py  db.py  exceptions.py  learnings.md  parrot.py  pyproject.toml
models/: __init__.py  metadata.py  storage.py  wal.py
storage/: __init__.py  btree.py  freelist.py  pager.py  pages.py
tests/: test_btree.py  test_db.py  test_models.py  test_pager.py
tools/: db_inspect.py
